# kc-cert-tracker

./: .dockerignore  .env.example  .gitignore  Dockerfile  LICENSE  Makefile  README.md  fly.toml  pyproject.toml
.github/workflows/: ci.yml  etl.yml
infrastructure/docker/: .env.example  docker-compose.yml
scripts/: api_backfill.py  backfill.py  backfill_categories.py  check_uncategorized.py  fetch_uncategorized_job_titles.py  lookup_job.py  rebuild_from_bronze.py
src/: config.py
src/api/: main.py
src/api/db/: queries.py
src/api/templates/: dashboard.html
src/etl/: run_pipeline.py
src/etl/extractors/: theirstack.py
src/etl/loaders/: gold.py  storage.py
src/etl/transformers/: categorizer.py  cert_extractor.py  dedup.py
tests/unit/: test_cert_extractor.py
